# Ark-Cpp

./: .gitmodules  CMakeLists.txt  README.md  library.json  platformio.ini
Examples/api/account/: account.ino
Examples/api/block/: block.ino
Examples/api/delegate/: delegate.ino
Examples/api/loader/: loader.ino
Examples/api/peer/: peer.ino
Examples/api/signature/: signature.ino
Examples/api/transaction/: transaction.ino
Examples/crypto/createAccount/: createAccount.ino
Examples/model/account/: account.ino
Examples/model/block/: block.ino
Examples/model/currency/: currency.ino
Examples/model/delegate/: delegate.ino
Examples/model/fees/: fees.ino
Examples/model/network/: network.ino
Examples/model/peer/: peer.ino
Examples/model/signature/: signature.ino
Examples/model/transaction/: transaction.ino
Examples/model/voter/: voter.ino
Examples/types/address/: address.ino
Examples/types/balance/: balance.ino
Examples/types/hash/: hash.ino
Examples/types/publickey/: publickey.ino
src/: Ark-Cpp.h  CMakeLists.txt
src/api/: README.md  api.h  manager.cpp  manager.h  paths.h
src/api/accountable/: account_respondable.cpp  account_respondable.h  accountable.cpp  accountable.h
src/api/blockable/: block_respondable.cpp  block_respondable.h  blockable.cpp  blockable.h
src/api/delegatable/: delegatable.cpp  delegatable.h  delegate_respondable.cpp  delegate_respondable.h
src/api/loadable/: loadable.cpp  loadable.h  loader_respondable.cpp  loader_respondable.h
src/api/multisignaturable/: multisignaturable.cpp  multisignaturable.h
src/api/peerable/: peer_respondable.cpp  peer_respondable.h  peerable.cpp  peerable.h
src/api/signaturable/: signaturable.cpp  signaturable.h
src/api/transactionable/: transaction_respondable.cpp  transaction_respondable.h  transactionable.cpp  transactionable.h
src/constants/: constants.h  networks.cpp  networks.h
src/crypto/: ark_crypto.cpp  ark_crypto.h
src/crypto/bip39/: bip39.cpp
src/models/: account.cpp  account.h  block.cpp  block.h  delegate.cpp  delegate.h  fees.cpp  network.cpp  network.h  peer.cpp  peer.h  transaction.cpp  transaction.h  voter.cpp  voter.h
src/platform/iot/: http.cpp  json.cpp  main.cpp
src/platform/os/: http.cpp  json.cpp
src/platform_IoT/: http_IoT.cpp
src/types/: address.h  balance.h  hash.h  hashable.h  types.h
src/types/base/: byteable.h  hexable.h
src/types/crypto/: eckey.h  ecpair.h  ecsignature.h
src/utilities/: connector.cpp  connector.h  formatting.h  http.h  json.h  platform.cpp  platform.h  utilities.h
test/: CMakeLists.txt  README.md  platformio.ini
test/api/: account.cpp  block.cpp  delegate.cpp  loader.cpp  peer.cpp  signature.cpp  transaction.cpp
test/crypto/: bip39.cpp  crypto.cpp
test/model/: account.cpp  block.cpp  currency.cpp  delegate.cpp  fees.cpp  network.cpp  peer.cpp  transaction.cpp  voter.cpp
test/types/: address.cpp  hash.cpp  publickey.cpp  signature.cpp
